@@ -5,5 +5,6 @@
    work_dir = './'
    output_fmt = 'plt'
    datatype = 'modulus'
+   locate_wf = .FALSE.
    wann = '1-2,7-8,14-15'
  /
