@@ -6,6 +6,6 @@
    datatype = 'modulus'
    output_fmt = 'plt'
    wann = '1-3,6'
-   nrzl = -32
-   nrzh =  32
+   r3min =  -1.5
+   r3max =   1.5
  /
