@@ -5,8 +5,5 @@
    work_dir = './LEADS/'
    datatype = 'modulus'
    output_fmt = 'plt'
-!   wann = '1-2'
-   wann = '1'
-   nrxl = -36
-   nrxh =  36
+   wann = '1-2'
  /
